--- a/Exam-Project/Areas/Admin/Views/Service/Update.cshtml
+++ b/Exam-Project/Areas/Admin/Views/Service/Update.cshtml
@@ -6,7 +6,7 @@
 <div class="container-fluid">
 
     <h1 class="h3 mb-4 text-gray-800">Service Update Page</h1>
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         <div class="mb-3">
             <label asp-for="ImageFile" class="form-label">ImageUrl</label>
             <input asp-for="ImageFile" class="form-control">
