Add Final Project

--- a/Exam-Project/Areas/Admin/Views/Service/Create.cshtml
+++ b/Exam-Project/Areas/Admin/Views/Service/Create.cshtml
@@ -11,11 +11,14 @@
     <div class="mb-3">
         <label asp-for="ImageFile" class="form-label">ImageUrl</label>
         <input asp-for="ImageFile" class="form-control">
+        <span asp-validation-for="ImageFile" class="text-danger"></span>
     </div>
     <div class="mb-3">
         <label asp-for="Name" class="form-label">Name</label>
         <input asp-for="Name" class="form-control">
+        <span asp-validation-for="Name" class="text-danger"></span>
     </div>
+
     <button type="submit" class="btn btn-primary">Create</button>
 </form>
 
